public url on Your Items

--- a/app/stylesheets/closet_hangers/_index.sass
+++ b/app/stylesheets/closet_hangers/_index.sass
@@ -99,6 +99,17 @@ body.closet_hangers-index
       +awesome-button
       margin: 0 0.5em
 
+  #closet-hangers-share
+    font-size: 85%
+    margin-bottom: 1em
+
+    label
+      font-weight: bold
+      margin-right: .5em
+
+    input
+      width: 30em
+
   #closet-hangers
     clear: both
     text-align: center
