move image mode faq to outfits#edit instead of userbar

--- a/app/stylesheets/outfits/_edit.sass
+++ b/app/stylesheets/outfits/_edit.sass
@@ -230,9 +230,10 @@ body.outfits-edit
     display: none
     font-size: 85%
     margin: 0 auto
-  #preview-mode-image-access-denied
+  #preview-mode-note
     display: block
     font-size: 75%
+    margin-top: .5em
     text-align: center
     text-decoration: none
     width: 100%
