new! tags to point to Your Items

--- a/app/stylesheets/outfits/_new.sass
+++ b/app/stylesheets/outfits/_new.sass
@@ -137,3 +137,12 @@ body.outfits-new
   #read-more
     float: right
 
+  #your-items-module
+    h3
+      &:after
+        color: red
+        content: "new!"
+        font-size: 85%
+        font-weight: bold
+        margin-left: .5em
+
