--- a/app/views/outfits/new.html.haml
+++ b/app/views/outfits/new.html.haml
@@ -28,7 +28,7 @@
 
 - cache :action_suffix => 'sections_and_description' do
   %ul#sections
-    %li
+    %li#your-items-module
       = link_to image_tag('your_items.png'), your_items_path
       %h3
         = link_to 'Your Items', your_items_path
