--- a/app/stylesheets/_layout.sass
+++ b/app/stylesheets/_layout.sass
@@ -155,6 +155,17 @@ ul.buttons
   &:hover span
     text-decoration: none
 
+#userbar-items-link
+  +hover-link
+  background: $module-bg-color
+  padding: .25em .5em
+
+  &:after
+    color: red
+    content: "new!"
+    font-size: 85%
+    margin-left: .5em
+
 .object
   +inline-block
   margin: $object-padding 0
