--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -650,7 +650,7 @@ body.closet_hangers-index #closet-hangers-contact {
 /* line 33, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index #closet-hangers-contact a, body.closet_hangers-index #closet-hangers-contact > span {
   text-decoration: none;
-  background-image: url('/images/neomail.png?1311877030');
+  background-image: url('/images/neomail.png?1312167956');
   background-position: left center;
   background-repeat: no-repeat;
   color: inherit;
@@ -664,7 +664,7 @@ body.closet_hangers-index #closet-hangers-contact a:hover, body.closet_hangers-i
 }
 /* line 44, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index #closet-hangers-contact > span {
-  background-image: url('/images/neomail_edit.png?1312153508');
+  background-image: url('/images/neomail_edit.png?1312167956');
 }
 /* line 47, ../../../app/stylesheets/closet_hangers/_index.sass */
 body.closet_hangers-index #closet-hangers-contact input[type=text], body.closet_hangers-index #closet-hangers-contact body.pets-bulk #bulk-pets-form textarea, body.pets-bulk #bulk-pets-form body.closet_hangers-index #closet-hangers-contact textarea {
@@ -2413,7 +2413,7 @@ body.outfits-edit .object:hover ul, body.outfits-edit .object:hover .object-info
 }
 /* line 419, ../../../app/stylesheets/outfits/_edit.sass */
 body.outfits-edit .nc-icon {
-  background: url('/images/nc.png?1311877029') no-repeat;
+  background: url('/images/nc.png?1312167956') no-repeat;
   height: 16px;
   position: absolute;
   right: 16px;
@@ -3549,21 +3549,19 @@ body.outfits-new #sections img:hover {
 body.outfits-new #read-more {
   float: right;
 }
-<<<<<<< HEAD
-/* line 135, ../../../app/stylesheets/outfits/_new.sass */
+/* line 139, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new .beta-tag {
   color: red;
   font-size: 50%;
   vertical-align: super;
-=======
-/* line 142, ../../../app/stylesheets/outfits/_new.sass */
+}
+/* line 146, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #your-items-module h3:after {
   color: red;
   content: "new!";
   font-size: 85%;
   font-weight: bold;
   margin-left: 0.5em;
->>>>>>> master
 }
 
 /* line 2, ../../../app/stylesheets/partials/_campaign-progress.sass */
