fix ambiguous item_link partial throwing errors in outfits#show

--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -1,3 +1,3 @@
 .object
-  = render :partial => 'item_link', :locals => {:item => item}
+  = render :partial => 'items/item_link', :locals => {:item => item}
 
