handle search errors better in wardrobe

--- a/app/stylesheets/outfits/_edit.sass
+++ b/app/stylesheets/outfits/_edit.sass
@@ -546,6 +546,10 @@ body.outfits-edit
   .outfit-url
     font-size: 75%
 
+  #preview-search-form-error
+    +error
+    padding: .25em .5em
+
   &.user-signed-in
     #preview-sidebar-nav-outfits
       display: block
