import sdb as well as closet

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -9,7 +9,7 @@
 @import closet_hangers/index
 @import closet_hangers/petpage
 @import closet_lists/form
-@import closet_pages/new
+@import neopets_pages/new
 @import contributions/index
 @import items
 @import items/index
