--- a/app/views/neopets_pages/new.html.haml
+++ b/app/views/neopets_pages/new.html.haml
@@ -1,26 +1,26 @@
-- title "Import from closet, Page #{@closet_page.index}"
+- title "Import from #{@neopets_page.name}, Page #{@neopets_page.index}"
 - content_for :before_flashes do
   = link_to 'Back to Your Items', user_closet_hangers_path(current_user), :id => 'back-to-items'
 
-= form_for @closet_page, :html => {:id => 'closet-page-form'} do |f|
+= form_for @neopets_page, :html => {:id => 'closet-page-form'} do |f|
   = f.hidden_field :index
   #closet-page-frame-wrapper
     %span
-      %strong Page #{@closet_page.index}
-      of your closet
-    %iframe#closet-page-frame{:src => @closet_page.url}
+      %strong Page #{@neopets_page.index}
+      of your #{@neopets_page.name}
+    %iframe#closet-page-frame{:src => @neopets_page.url}
   #closet-page-source
     = f.label :source, "Paste source code below"
     = f.text_area :source
-  = f.submit 'Add items to closet'
+  = f.submit 'Import items'
 
 :markdown
-  **Welcome to the bulk closet importer!** We're going to make it as
-  easy as possible to import your Neopets.com closet data into your Dress to
-  Impress closet. Here's how it works.
+  **Welcome to the bulk #{@neopets_page.name} importer!** We're going to make it as
+  easy as possible to import your Neopets.com #{@neopets_page.name} data into your Dress to
+  Impress items list. Here's how it works.
 
   1. Check the framed Neopets.com window on the left, pointing to
-    [page #{@closet_page.index} of your closet][cp].
+    [page #{@neopets_page.index} of your #{@neopets_page.name}][cp].
       * **Confirm that you're logged in.** If you're logged into
         Neopets, but the above frame says that you're not, try enabling
         "third-party cookies" in your browser. (Most have that on by default.)
@@ -29,7 +29,7 @@
         web programmer pro who can check that the frame does, in fact, point
         to Neopets.com. To be safe,
         #{link_to_neopets_login "pull up another window, check the URL, and log in safely"}.
-      * **Confirm that the page is, in fact, your closet.** Similarly, don't
+      * **Confirm that the page is, in fact, your #{@neopets_page.name}.** Similarly, don't
         just trust a website when they tell you to copy-paste the source code
         of another site. Instead, check that the page is what it is supposed to
         be and does not contain any information you didn't mean to give out.
@@ -39,7 +39,7 @@
       * **In Firefox,** right-click the frame, choose **This Frame**, then **View Frame Source**.
       * In other browsers, right-click, and look for something similar. If you're
         still having trouble, try
-        #{link_to "viewing the page in a new window", @closet_page.url, :target => "_blank"},
+        #{link_to "viewing the page in a new window", @neopets_page.url, :target => "_blank"},
         right-clicking, and choosing View Source.
 
   3. Highlight the entire source code, and copy-paste it into the box on the right.
@@ -48,10 +48,10 @@
 
   4. Submit!
       * We'll analyze the code you sent us, grab exclusively the identity and
-        quantity of items in your closet, and add that to your Dress to Impress
-        closet. I promise it's all safe, but, if you're concerned, find a
+        quantity of items in your #{@neopets_page.name}, and add that to your Dress to Impress
+        items list. I promise it's all safe, but, if you're concerned, find a
         programmer buddy and [check out the source code to be sure][source].
 
-  [cp]: #{@closet_page.url}
+  [cp]: #{@neopets_page.url}
   [source]: http://github.com/matchu/openneo-impress-rails
 
